--- a/Code/templates/main.html
+++ b/Code/templates/main.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="style.css"/> 
+   <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"/> 
   
    <title></title>
 </head>
@@ -19,8 +20,8 @@
 </p>
 <p>
 
-<a href="courseSearch.html" target="_blank" class="button"id="b1"> Course Search </button></a>
-<a href="fouryear.html" target="_blank" class="button" id="b2"> Four-Year Plan </button>
+<a href="search" target="_blank" class="button"id="b1"> Course Search </button></a>
+<a href="fyp" target="_blank" class="button" id="b2"> Four-Year Plan </button>
 <a href="degreeProgress.html" target="_blank" class="button" id="b3"> Degree Progress </button>
 
 
