--- a/Code/templates/courseSearch.html
+++ b/Code/templates/courseSearch.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"/> 
-   <link rel="stylesheet" href="style.css"/> 
+   <!-- <link rel="stylesheet" href="style.css"/>  -->
    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=TimesNewRoman">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
@@ -46,7 +46,9 @@
 
 <div id="search_results"></div>
 
+
+
 <script src="{{url_for('static', filename='js/search.js')}}"></script>
-<script src="script.js"></script>
+<!-- <script src="script.js"></script> -->
 </body>
 </html>
