--- a/Code/templates/courseSearch.html
+++ b/Code/templates/courseSearch.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"/> 
+   <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}"/> 
    <!-- <link rel="stylesheet" href="style.css"/>  -->
    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=TimesNewRoman">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
