--- a/Code/templates/fouryear.html
+++ b/Code/templates/fouryear.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="style.css"/> 
    <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}"/> 
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </head>
 <body>
@@ -52,6 +53,7 @@
 <button  id="back"> back </button>  
 
  <script src="{{url_for('static', filename = 'js/script.js')}}"> </script>
+
 
 </body>
 </html>
