coding is not fun

--- a/Code/templates/courseSearch.html
+++ b/Code/templates/courseSearch.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="banner">
-	<a id="none" href="main.html"><h2> NYU ABU DHABI </h2> </a>
+	<a id="none" href="main"><h2> NYU ABU DHABI </h2> </a>
 </div>
 
 <!-- make the lil form here!!! -->
