--- a/Code/templates/degreeProgress.html
+++ b/Code/templates/degreeProgress.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 <div id="banner">
-	<a id="none" href="main.html"><h2> NYU ABU DHABI </h2> </a>
+	<a id="none" href="main"><h2> NYU ABU DHABI </h2> </a>
 </div>
 <p id="progress"><span id="part1"> Are you on track to graduate?</span> </br><span id="under">Get </span> your Degree Progress Report</p>
 
 
-
-
-
+<div id="progreport">
+  
+</div>
 
 
 </body>
