--- a/Code/templates/login.html
+++ b/Code/templates/login.html
@@ -4,19 +4,24 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="style.css"/> 
+   <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}"/>
    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   
    <title></title>
 </head>
 <body id="login">
-<div id="banner">
-	<h2> NYU ABU DHABI </h2> 
-</div>
 
+<div style="margin: top 10%;">
 <p id="mainHeader"> CAR Login </p>
 <p id="sub"> course analysis and registration</p>
 <div id="loginInfo">
-<a href="main.html"><p>INSERT LOGIN INFORMATION</p></a>
+  <label for="email">Email</label>
+  <input id="email" placeholder="Email"><br>
+  <label for="password">Password</label>
+  <input type="password" id="password"><br>
+  <button id="try5" id="submit">Submit</button>
+</div>
+
 </div>
 
  <script src="script.js"> </script>
