--- a/Code/templates/login.html
+++ b/Code/templates/login.html
@@ -6,6 +6,7 @@
    <link rel="stylesheet" href="style.css"/> 
    <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}"/>
    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   
    <title></title>
 </head>
@@ -24,6 +25,7 @@
 
 </div>
 
- <script src="script.js"> </script>
+<script src="{{url_for('static', filename = 'js/script.js')}}"> </script>
+<script src="{{url_for('static', filename='js/login.js')}}"></script>
 </body>
 </html>
