--- a/Code/templates/main.html
+++ b/Code/templates/main.html
@@ -6,6 +6,7 @@
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
    <link rel="stylesheet" href="style.css"/> 
    <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}"/> 
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   
    <title></title>
 </head>
@@ -13,19 +14,28 @@
 <div id="banner">
 	<h2> NYU ABU DHABI </h2> 
 </div>
-<p id="name"> Name</p> <!-- passed with python on jinja  -->
-<p id="info"> major, minor</p> <!-- passed with python on jinja  -->
+<p id="name"> {{name}}</p> <!-- passed with python on jinja  -->
+<p id="info">
+  <select id="majorSelect" style="min-width:10em;" onchange="changeMajor(this)">
+    {%for maj in majors%}
+    <option value="{{maj.name}}" {%if maj.name == currentMajor%} selected="selected" {%endif%}>{{maj.name}}</option>
+    {%endfor%}
+  </select>
+
+
+</p> <!-- passed with python on jinja  -->
 <p id="exp1">
 	</p>
 <p id="exp2">
 </p>
 <p>
 
+
 <a href="search" target="_blank" class="button"id="b1"> Course Search </button></a>
 <a href="fyp" target="_blank" class="button" id="b2"> Four-Year Plan </button>
-<a href="degreeProgress.html" target="_blank" class="button" id="b3"> Degree Progress </button>
+<a href="degreeProgress" target="_blank" class="button" id="b3"> Degree Progress </button>
 
 
- <script src="script.js"> </script>
+<script src="{{url_for('static', filename = 'js/changeMajor.js')}}"> </script>
 </body>
 </html>
