--- a/Code/templates/dpAdmin.html
+++ b/Code/templates/dpAdmin.html
@@ -55,7 +55,7 @@
         <td id="td4" id="pre">{{pre}}</td>
         
         <td id="td41">
-          <button id="remove" id="submit" onclick="deletePreReq(this)">Delete</button><br>
+          
         </td>
       </tr>
 
@@ -68,8 +68,9 @@
   
 </table>
 
-{%endfor%}
 
+{%endfor%}
+<a href="/saveSystem">s</a>
 
 
 
