--- a/Code/templates/fouryear.html
+++ b/Code/templates/fouryear.html
@@ -14,8 +14,8 @@
 	<a id="none" href="main"><h2> NYU ABU DHABI </h2> </a>
 </div>
 <p id="f1"> To generate a Four-year plan: </p>
-	<p id="inst">1. Input <a href="/main">your major/minor</a> </br>
-	2. Input your <a href="/search">previous courses</a> </br>
+	<p id="inst">1. Input <a style="color: inherit;" href="/main">your major/minor</a> </br>
+	2. Input your <a style="color: inherit;" href="/search">previous courses</a> </br>
 3. Click the generate button </br>
 </p>
 <button  id="gen" onclick="generate()"> Generate </button>
