--- a/Code/templates/courseSearch.html
+++ b/Code/templates/courseSearch.html
@@ -20,6 +20,8 @@
                 <option value="2020">2020</option>
                 <option value="2021">2021</option>
                 <option value="2022">2022</option>
+                <option value="2023">2023</option>
+                <option value="2024">2024</option>
             </select>
             <label id="try2" for="sem">Semester</label>
             <select id="sem">
